# StructInsight_in_Python

./: .gitignore  README.md  __main__.py  __main__procedural.py  contibeam_main.py  test.py  test1.py
base_classes/: loading.py  member.py
beam_classes/: beam.py  continuousbeam.py
continuous_beam/: analysis.py  beam_data.py  contibeam_main.py  load_data.py
continuous_beam/beam_classes/: beam.py  continuousbeam.py
continuousbeam/: LICENSE  MANIFEST.in  README.md  pyproject.toml
continuousbeam/src/continuousbeam/: __init__.py  analysis.py  beam_data.py  contibeam_main.py  load_data.py
continuousbeam/src/continuousbeam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
continuousbeam_backend/: README.md  pyproject.toml
continuousbeam_backend/src/base_classes/: __init__.py  loading.py  member.py
continuousbeam_backend/src/beam_classes/: __init__.py  beam.py  continuousbeam.py
continuousbeam_backend/src/continuousbeam_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
continuousbeam_backend/tests/: backend_test1.py
