# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuousbeam_backend"
# Version system: YYYY.0M.PATCH
version = "2023.11.0"
description = "Structural analysis of continuous beam using stiffness matrix method"
readme = "README.md"
authors = [{ name = "Sanjay G. Khirwadkar", email = "khirwadkar@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Topic :: Scientific/Engineering",
]
keywords = ["continuous beam", "indeterminate beam", "stiffness matrix", "structural engineering", "structural analysis"]
dependencies = [
     "numpy >= 1.23",
]
requires-python = ">=3.8"

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/khirwadkar/StructInsight_in_Python"

# [project.scripts]
# realpython = "reader.__main__:main"

